// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Should show 'mute' label 1`] = `
<a
  className="mute-btn"
  href="#"
  onClick={[Function]}
>
  Mute
</a>
`;

exports[`(2) Should show 'unmute' label 1`] = `
<a
  className="mute-btn"
  href="#"
  onClick={[Function]}
>
  Unmute
</a>
`;

exports[`(3) Dialog body for 'mute' 1`] = `
<div
  className="mute-form"
>
  <div
    className="mb-4"
  >
    <div
      className="entry-title"
    >
      @
      good-karma
      /
      awesome-hive
    </div>
    <div
      className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
    >
      <input
        autoComplete="off"
        autoFocus={true}
        className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
        maxLength={120}
        onChange={[Function]}
        placeholder="Notes"
        type="text"
        value=""
      />
    </div>
    <small>
      Provide a note regarding your decision to mute this content.
    </small>
  </div>
  <div>
    <button
      className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "outline": "none",
        }
      }
      type="button"
    >
      <div>
        Mute
      </div>
    </button>
  </div>
</div>
`;

exports[`(4) Dialog body for 'unmute' 1`] = `
<div
  className="mute-form"
>
  <div
    className="mb-4"
  >
    <div
      className="entry-title"
    >
      @
      good-karma
      /
      awesome-hive
    </div>
    <div
      className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
    >
      <input
        autoComplete="off"
        autoFocus={true}
        className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
        maxLength={120}
        onChange={[Function]}
        placeholder="Notes"
        type="text"
        value=""
      />
    </div>
    <small>
      Provide a note regarding your decision to unmute this content.
    </small>
  </div>
  <div>
    <button
      className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "outline": "none",
        }
      }
      type="button"
    >
      <div>
        Unmute
      </div>
    </button>
  </div>
</div>
`;
